--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       <div class="logo-text">
         <p>Dropbox</p>
       </div>
+      <button type="button" class="nav-button"><a href="#">Why Dropbox?</a></button>
+      <button type="button" class="nav-button"><a href="#">Products</a></button>
+      <button type="button" class="nav-button"><a href="#">Solutions</a></button>
+      <button type="button" class="nav-button"><a href="#">Pricing</a></button>
     </div>
     <div class="right-box">
 
