--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
       <button type="button" class="nav-button"><a href="#">Pricing</a></button>
     </div>
     <div class="right-box">
-
+      <button type="button" class="nav-button"><a href="#">Contact</a></button>
+      <button type="button" class="nav-button"><a href="#">Get App</a></button>
+      <button type="button" class="nav-button"><a href="#">Sign up</a></button>
+      <button type="button" class="nav-button"><a href="#">Sign in</a></button>
     </div>
   </nav>
 
