--- a/index.html
+++ b/index.html
@@ -31,8 +31,17 @@
       <button type="button" class="nav-button"><a href="#">Get App</a></button>
       <button type="button" class="nav-button"><a href="#">Sign up</a></button>
       <button type="button" class="nav-button"><a href="#">Sign in</a></button>
+      <button type="button" class="btn-get-started"><a href="#">Get started <i class="bi bi-arrow-right"></i></a></button>
     </div>
   </nav>
+
+  <main>
+    <!-- HERO SECTION -->
+    <div class="hero-section">
+      <h2 class="hero-heading-mobile">Join over 700 <br> million registered <br> users who trust <br> Dropbox</h2>
+      <h2 class="hero-heading">Join over 700 million registered <br> users who trust Dropbox</h2>
+    </div>
+  </main>
 
 
   <script src="javascript.js"></script>
