--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       <button type="button" class="nav-button"><a href="#">Get App</a></button>
       <button type="button" class="nav-button"><a href="#">Sign up</a></button>
       <button type="button" class="nav-button"><a href="#">Sign in</a></button>
-      <button type="button" class="btn-get-started"><a href="#">Get started <i class="bi bi-arrow-right"></i></a></button>
+      <button type="button" class="btn-get-started"><a href="#">Get started <i
+            class="bi bi-arrow-right"></i></a></button>
     </div>
   </nav>
 
@@ -40,7 +41,35 @@
     <div class="hero-section">
       <h2 class="hero-heading-mobile">Join over 700 <br> million registered <br> users who trust <br> Dropbox</h2>
       <h2 class="hero-heading">Join over 700 million registered <br> users who trust Dropbox</h2>
-    </div>
+      <p class="sub-heading">Easy to use, reliable, private, and secure. It’s no wonder Dropbox is the choice for
+        storing and sharing your<br> most important files.
+      </p>
+      <button type="button" class="btn-plan"><a href="#">Find your plan <i class="bi bi-arrow-right"></i></a></button>
+      <img src="./images/img.jpg" alt="" class="hero-image">
+      <h2 class="hero-heading">see what sets Dropbox apart</h2>
+      <div class="hero-boxes">
+        <section>
+          <img src="./images/emoji smile.svg" alt="">
+          <h3>Your files, not ours</h3>
+          <p>With Dropbox, your files belong to<br> you, not us, so you can be sure<br> we’re not reselling your data.</p>
+        </section>
+        <section>
+          <img src="./images/cloud done.svg" alt="">
+          <h3>All your files in one place</h3>
+          <p>Store computer backups, photo<br> libraries, thousands of documents<br>—all your files, in the same place.</p>
+        </section>
+        <section>
+          <img src="./images/twinkle.svg" alt="">
+          <h3>One-of-a-kind functionality</h3>
+          <p>Store files as large as 2 TB each,<br> sync at light speed, and allow<br> anyone to preview nearly 200 file<br> types.</p>
+        </section>
+        <section>
+          <img src="./images/shield.svg" alt="">
+          <h3>Ease of use and security</h3>
+          <p>2/3 of surveyed users say<br> Dropbox keeps their files more<br> secure and we’re a leader in ease<br> of use.</p>
+        </section>
+      </div>
+    </div> <!-- ./hero-section -->
   </main>
 
 
