--- a/index.html
+++ b/index.html
@@ -51,22 +51,22 @@
         <section>
           <img src="./images/emoji smile.svg" alt="">
           <h3>Your files, not ours</h3>
-          <p>With Dropbox, your files belong to<br> you, not us, so you can be sure<br> we’re not reselling your data.</p>
+          <p>With Dropbox, your files belong to you, not us, so you can be sure we’re not reselling your data.</p>
         </section>
         <section>
           <img src="./images/cloud done.svg" alt="">
           <h3>All your files in one place</h3>
-          <p>Store computer backups, photo<br> libraries, thousands of documents<br>—all your files, in the same place.</p>
+          <p>Store computer backups, photo libraries, thousands of documents—all your files, in the same place.</p>
         </section>
         <section>
           <img src="./images/twinkle.svg" alt="">
           <h3>One-of-a-kind functionality</h3>
-          <p>Store files as large as 2 TB each,<br> sync at light speed, and allow<br> anyone to preview nearly 200 file<br> types.</p>
+          <p>Store files as large as 2 TB each, sync at light speed, and allow anyone to preview nearly 200 file types.</p>
         </section>
         <section>
           <img src="./images/shield.svg" alt="">
           <h3>Ease of use and security</h3>
-          <p>2/3 of surveyed users say<br> Dropbox keeps their files more<br> secure and we’re a leader in ease<br> of use.</p>
+          <p>2/3 of surveyed users say Dropbox keeps their files more secure and we’re a leader in ease of use.</p>
         </section>
       </div>
     </div> <!-- ./hero-section -->
