--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
         </section>
       </div>
     </div> <!-- ./hero-section -->
+
+    <!-- TILES SECTION -->
+    <div class="tiles-section">
+      <div class="left-tile"></div>
+      <div class="right-tile"></div>
+    </div> <!-- ./tiles-section -->
   </main>
 
 
